--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,12 +13,6 @@ jobs:
 
   run-tests:
 
-    strategy:
-      matrix:
-        go-version:
-          - stable
-          - oldstable
-
     runs-on: ubuntu-latest
 
     permissions:
@@ -32,7 +26,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: stable
 
       - name: Run tests
         run: go test -v ./...
